# vertex-id

./: .gitignore  CMakeLists.txt
sources/: CMakeLists.txt
sources/anim/: BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  CameraManipulate.cpp  CameraManipulate.h  DecomposeSample.cpp  DecomposeSample.h  GpbVertexViewer.cpp  GpbVertexViewer.h  ParseGpbXml.cpp  ParseGpbXml.h  Profile.cpp  Profile.h  Program.cpp  Program.h  RenderHUD.cpp  RenderHUD.h  Texture2D.cpp  Texture2D.h  XmlViewer.cpp  XmlViewer.h  blit.vs  camera.cpp  camera.h  dot.fs  el_debug.cpp  el_debug.h  el_math_types.cpp  el_math_types.h  el_predefines.h  el_quat.h  el_scalar.h  el_vec4.h  fullscreen.fs  fullscreen.vs  gridBackground.fs  hud.cpp  hud.h  imgui_input.cpp  imgui_input.h  (+16 more)
sources/anim/Assets/: Box.gpb  Box.material  RightU.fbx  RightU.gpb  RightU.material  RightU.xml  RightUpper.xml  Sphere.gpb  Sphere.material  bone1.glb  bone3.glb  bone31.glb  bone32.glb  captest5.xml  cube.frag  cube.vert  custom_blendshape.xml  deconeyelashes.fbx  deconeyelashes.gpb  deconeyelashes.json  dectheyelashes.fbx  dectheyelashes.gpb  dectheyelashes.json  eyelasheseyecover.gpb  eyelasheseyecover.json  eyelasheseyecover.material  eyelashesjantw.gpb  eyelashesjantw.json  eyelashesjantw.material  eyelashesns.gpb  eyelashesns.xml  eyelashesnsLower.json  eyelashesnsUpper.json  fullImage.fs  fullImage.vs  grid.frag  grid.vert  parteyelahedown.json  parteyelahedown2.json  parteyelaheup.json  (+8 more)
sources/anim/Assets/eyelashesjanst/: eyelashesjanst.gpb  eyelashesjanst.json  eyelashesjanst.material.backup
sources/anim/Shaders/: flat.frag  lit.frag
sources/anim/gpb/: ELBase.h  ELBundle.cpp  ELBundle.h  ELFileSystem.cpp  ELFileSystem.h  ELFrustum.cpp  ELFrustum.h  ELMathUtil.cpp  ELMathUtil.h  ELMathUtil.inl  ELMathUtilNeon.inl  ELMatrix.cpp  ELMatrix.h  ELMatrix.inl  ELNode.cpp  ELNode.h  ELPlane.cpp  ELPlane.h  ELPlane.inl  ELPredeclare.h  ELQuaternion.cpp  ELQuaternion.h  ELQuaternion.inl  ELStream.cpp  ELStream.h  ELVector2.cpp  ELVector2.h  ELVector2.inl  ELVector3.cpp  ELVector3.h  ELVector3.inl  ELVector4.cpp  ELVector4.h  ELVector4.inl  ELVertexFormat.cpp  ELVertexFormat.h
sources/anim/nanovg/: nanovg.c
sources/anim/sample/: Application.h  Attribute.cpp  Attribute.h  Chapter06Sample01.cpp  Chapter06Sample01.h  Chapter09Sample01.cpp  Chapter09Sample01.h  Chapter10Sample01.cpp  Chapter10Sample01.h  Chapter10Sample02.cpp  Chapter10Sample02.h  Clip.cpp  Clip.h  DebugDraw.cpp  DebugDraw.h  Draw.cpp  GLTFLoader.cpp  GLTFLoader.h  GeometryGenerator.cpp  IndexBuffer.cpp  Mesh.cpp  Pose.cpp  Pose.h  Shader.cpp  Skeleton.cpp  Skeleton.h  Texture.cpp  Track.cpp  Track.h  Transform.cpp  Transform.h  TransformTrack.h  Uniform.cpp  Uniform.h
sources/anim/shader/: build.sh  fade.frag  fade_edge.frag  foldsheet.glsl
sources/math/: CMakeLists.txt  Mat4.cpp  Mat4.h  Vec2.h  Vec3.h  Vec4.h  el_macros.h  el_platform.h  el_vec4.h  main.cpp  test_mat.cpp  test_vec.cpp
